更新默认图片为Imgur链接，清理测试文件和临时文件

--- a/templates/index.html
+++ b/templates/index.html
@@ -229,9 +229,9 @@
 
         // 默认图片URL
         let defaultImages = {
-            background: '/static/images/default_background.jpg',
-            texture: '/static/images/default_texture.jpg',
-            element: '/static/images/default_element.png'
+            background: 'https://i.imgur.com/dZiq5zz.jpg',
+            texture: 'https://i.imgur.com/q4k2sZw.jpg',
+            element: 'https://i.imgur.com/L8ObmW8.png'
         };
         
         // 页面加载时获取默认图片
