--- a/templates/index.html
+++ b/templates/index.html
@@ -229,9 +229,9 @@
 
         // 默认图片URL
         let defaultImages = {
-            background: 'https://i.imgur.com/dZiq5zz.jpg',
-            texture: 'https://i.imgur.com/q4k2sZw.jpg',
-            element: 'https://i.imgur.com/L8ObmW8.png'
+            background: 'https://i.imgur.com/dZiq5zz.jpg?raw=1',
+            texture: 'https://i.imgur.com/q4k2sZw.jpg?raw=1',
+            element: 'https://i.imgur.com/L8ObmW8.png?raw=1'
         };
         
         // 页面加载时获取默认图片
