更新默认图片链接为dcloud链接

--- a/templates/index.html
+++ b/templates/index.html
@@ -229,9 +229,9 @@
 
         // 默认图片URL
         let defaultImages = {
-            background: 'https://i.postimg.cc/bNQp0Gk8/bg.jpg',
-            texture: 'https://i.postimg.cc/SsGcs0tr/texture.jpg',
-            element: 'https://i.postimg.cc/23M6tfnk/element.png'
+            background: 'https://mp-71407943-224d-4e7e-a1f9-e6e1b9bd6d81.cdn.bspapp.com/c10s/default_background.jpg',
+            texture: 'https://mp-71407943-224d-4e7e-a1f9-e6e1b9bd6d81.cdn.bspapp.com/c10s/default_texture.jpg',
+            element: 'https://mp-71407943-224d-4e7e-a1f9-e6e1b9bd6d81.cdn.bspapp.com/c10s/default_element.png'
         };
         
         // 页面加载时获取默认图片
