修改端口至5001，清理多余文件，优化项目结构

--- a/templates/index.html
+++ b/templates/index.html
@@ -229,9 +229,9 @@
 
         // 默认图片URL
         let defaultImages = {
-            background: 'https://i.postimg.cc/bNQp0Gk8/bg.jpg',
-            texture: 'https://i.postimg.cc/SsGcs0tr/texture.jpg',
-            element: 'https://i.postimg.cc/23M6tfnk/element.png'
+            background: '',
+            texture: '',
+            element: ''
         };
         
         // 页面加载时获取默认图片
